--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -79,32 +79,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="blog-date-time mb-2">
               <ul class="listing mt-3">
                 <li>
-                  <span class="fa fa-calendar mr-2"></span>Дата: <span>13 Февраля 2021 Года</span>
+                  <span class="fa fa-calendar mr-2"></span>Дата: <span>28 февраля 2021 Года</span>
                 </li>
               </ul>
             </div>
             <h4 class="mb-3">
-              Экскурсия в Лимонный сад
+              Тайны и загадки острова
             </h4>
             <p class="txt-alg-jf">
-              Яркие сочные лимончики висящие на ветках,
-              интересно, экзотично и необычно ведь мы не 
-              в Сицилии или Грузии, а частном Лимонном саду
-              города Запорожья. Мы посетим удивительное место, узнаем
-              историю семьи которая растит эти чудо-лимоны, сделаем 
-              фото среди лимонных ветвей. А чтоб не грустить дома
-              без вкусностей, каждый получит <strong>1 кг</strong> вкуснейших
-              лимонов с собой!
+              Удивительный и таинственный! 
+              Такой родной и привычный для жителей 
+              Запорожья остров. А ведь в нем так много
+              тайн и загадок... Откроем их вместе ?
             </p>
             <hr>
        <!-- Alert warning -->
              <div class="alert alert-warning mt-3 ">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br/>
-	        <span class="txt-alg-jf">В стоимость входит 1 кг лимонов с собой. 
-                  180 грн 0-12 лет (в стоимость входит 0.5 кг 
-                   лимонов с собой), цена для семей от 2 человек
-                    с детьми, стоимость указана за 1 человека.</span>
+	        <span class="txt-alg-jf">Стоимость 80 грн. для детей от 5-12 лет, до 4-х лет бесплатно.</span>
             </div>
             <ul class="listing">
 		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>230 Грн.</span></li> 
@@ -168,33 +161,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
 	      <div class="card-body txt-alg-jf">
 
-		<p><b>12:45*</b> время сбора группы на экскурсию. 
-		     Сбор в районе 9-й больницы, Правый берег,
-		     дополнительную информацию сбрасываем за 2-3 дня
-		     до тура всем кто записался и оплатил экскурсию 50%. 
-		     (как всегда оплата через расчетный счет в течении суток после брони)</p>
-		 <p><b>13:00</b> после небольшой пешей прогулки мы на месте. 
-		     Проходим частную территорию и попадаем в Лимонарий! 
-		      Удивительный уголок солнечно-лимонного счастья. 
-		      Слушаем историю создания этого чуда. Обязательно 
-		      делаем фото на память среди лимонных ветвей!
-		      Длительность экскурсии и время для фото всего: 45 минут.
-		      Получаем с сбой заряд бодрости и витамина С в виде 1 кг 
-		      лимончиков с собой и довольные отправляться к родным и
-		      близким делиться впечатлениями, фото и вкусными лимонами!
-		  </p>
-		  <p>Желательно на экскурсию подготовить удобную обувь!
-		    В Лимонарии температура всего на пару грудусов больше
-		    чем на улице, одевайтесь теплее.
+		<p>11:00 сбор в р-не о.Хортица 
+                  (дополнительно сообщаем всем кто записался
+                   на экскурсию за 2 дня до даты).
+                   Минутка позитива и в путешествие
+                   Нас ожидают: "Шевченківська стежка",
+                   Черная скала, виды на прекрасный Днепрогэс, 
+                   Сичевые ворота, высота Брогарня,
+                   захоронение Колдуна, древние святилища 
+                   и Балка молодяга...
+                   Мы загадаем заветные желание в 
+                   местах силы, получим заряд бодрости и 
+                   энергии в балке молодости и узнаем много 
+                   нового и неизведанного о нашем родном крае.
+                   Окончание экскурсии 12:30-13:00 )
 		   </p><br/><hr>
 		   <p><i>
-		     *время начала и окончания экскурсии указаны 
-		     предварительные, они могут быть изменены в 
-		     зависимости от состава группы, без изменения 
-		     указанной программы! Группы от 7 до 16 человек, 
-		     возможен заказ индивидуальных экскурсий от 6 до 9 
-		     человек по цене 265 грн/чел.
-		    </i></p>
+		     *время начала окончания экскурсии указаны 
+                      предварительные, они могут быть изменены в 
+                      зависимости от состава группы, без изменения 
+                      указанной программы!
+		   </i></p>
 	      </div>
 	    </div>
 	  </div>
