--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -194,10 +194,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h5 class="alert-heading">В стоимость входит:</h5>
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item list-group-item-success">
-					вход в Лимонарий;
+			           экскурсионное сопровождение по маршруту от экскурсовода "Нового поворота";
 				</li>
 				<li class="list-group-item list-group-item-success " >
-					экскурсия-рассказ о Лимонном саде;
+				 позитивный настрой на долгие месяцы вперед;
 				</li>
 				<li class="list-group-item list-group-item-success " >
 					1 кг вкуснейших лимонов с собой каждому (лимоны можно кушать без сахара);
@@ -213,6 +213,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item list-group-item-danger " >
 					проезд до места собора на экскурсию и обратно;
+				</li>
+                                <li class="list-group-item list-group-item-danger " >
+					питание;
 				</li>
 				<li class="list-group-item list-group-item-danger " >
 					личные расходы.
