--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -97,7 +97,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
              <div class="alert alert-warning mt-3 ">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br/>
-	        <span class="txt-alg-jf">Стоимость 80 грн. для детей от 5-12 лет, до 4-х лет бесплатно.</span>
+	        <span class="txt-alg-jf">Стоимость 80 грн. для детей от 5-12 лет, дети до 4-х лет бесплатно.</span>
             </div>
             <ul class="listing">
 		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>230 Грн.</span></li> 
