--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -161,20 +161,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
 	      <div class="card-body txt-alg-jf">
 
-		<p>11:00 сбор в р-не о.Хортица 
-                  (дополнительно сообщаем всем кто записался
-                   на экскурсию за 2 дня до даты).
-                   Минутка позитива и в путешествие
+		<p><strong>11:00</strong> сбор в районе острова Хортица 
+                  (дополнительно оповещаем всех кто записался
+                   за 2 дня до начала экскурсии).
+                   Минутка позитива и в путешествие. 
                    Нас ожидают: "Шевченківська стежка",
                    Черная скала, виды на прекрасный Днепрогэс, 
                    Сичевые ворота, высота Брогарня,
                    захоронение Колдуна, древние святилища 
-                   и Балка молодяга...
-                   Мы загадаем заветные желание в 
+                   и Балка молодяга...</p>
+                  <p> Мы загадаем заветные желание в 
                    местах силы, получим заряд бодрости и 
                    энергии в балке молодости и узнаем много 
-                   нового и неизведанного о нашем родном крае.
-                   Окончание экскурсии 12:30-13:00 )
+                   нового и неизведанного о нашем родном крае.<br/>
+                   Окончание экскурсии <strong>12:30-13:00</strong>.</p>
 		   </p><br/><hr>
 		   <p><i>
 		     *время начала окончания экскурсии указаны 
