--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -165,11 +165,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   (дополнительно оповещаем всех кто записался
                    за 2 дня до начала экскурсии).
                    Минутка позитива и в путешествие. 
-                   Нас ожидают: "Шевченківська стежка",
+                   Нас ожидают: <ins>"Шевченківська стежка",
                    Черная скала, виды на прекрасный Днепрогэс, 
                    Сичевые ворота, высота Брогарня,
                    захоронение Колдуна, древние святилища 
-                   и Балка молодяга...</p>
+                   и Балка молодяга...</ins></p>
                   <p> Мы загадаем заветные желание в 
                    местах силы, получим заряд бодрости и 
                    энергии в балке молодости и узнаем много 
