--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -227,7 +227,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h5 class="alert-heading">В стоимость не входит:</h5>
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item list-group-item-danger " >
-					проезд до места собора на экскурсию и обратно;
+					проезд до места сбора на экскурсию и обратно;
 				</li>
 				<li class="list-group-item list-group-item-danger " >
 					личные расходы.
