--- a/packages.html
+++ b/packages.html
@@ -89,8 +89,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<section class="packages py-5">
 		<div class="container py-lg-4 py-sm-3">
 			<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Туры</h3>
-			<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue.
-				Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
+			<p class="text mt-2 mb-5 text-center"> Все туры выходного дня Нового Поворота</p>
 			<div class="row">
 				<!--  Пиво -->
 				<div class="col-lg-3 col-sm-6 mb-5">
