--- a/packages.html
+++ b/packages.html
@@ -287,7 +287,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<section class="destinations py-5" id="destinations">
 		<div class="container py-xl-5 py-lg-3">
 			<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>
-			<p class="text mt-2 mb-5 text-center">Популярные туры выходного дня Нового Поворота</p>
+			<p class="text mt-2 mb-5 text-center">Популярные туры выходного дня, путешествуйте вместе с нами...</p>
 			<div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 				<!--  Лимонарий   -->
 				<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
