--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </p>
 		<div class="row">
 			<!--  Пиво -->
-			<div class="col-lg-3 col-sm-6">
+			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
                                       <a href="https://novi-povorot.pp.ua/page-Beer.html">
 					<img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
@@ -266,7 +266,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--  //Пиво -->
 			
 			<!--  Турция -->
-			<div class="col-lg-3 col-sm-6">
+			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
                                         <a href="https://novi-povorot.pp.ua/page-Turkey.html">
 					 <img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
@@ -283,10 +283,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 			</div>
-			<!--  //Лос-Анджелес, США.  -->
+			<!--  //Турция  -->
 			
 			<!--  Полтава | экскурсия в Полтаву -->
-			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
+			<div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
 				<div class="image-tour position-relative">
                                        <a href="https://novi-povorot.pp.ua/page-Poltava.html">
 					   <img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
@@ -305,7 +305,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--  //Полтава  -->
 			
 			<!--  Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
-			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
+			<div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
 				<div class="image-tour position-relative">
                                       <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
 					  <img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
