--- a/index.html
+++ b/index.html
@@ -341,9 +341,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container py-md-3">
 			<div class="test-info"  data-aos="fade-right">
 				<h4 class="tittle">Наслаждайтесь Поездкой</h4>
-				<p class="mt-3">Duis nisi sapien, elementum finibus fermentum eget, aliquet leo et. Mauris hendrerit vel ex. Quisque vitae luctus massa.
-				Phasellus sed aliquam leo a massa eu fringilla. Integer ultrices finibus sed nisi. in convallis felis dapibus
-				sit amet.</p>
+				<p class="mt-3">
+                                  Не забудь своих друзей, в большой компании всегда веселей.
+                                  Бронирование билетов осуществляется заранеe!
+                                 </p>
 				<div class="text-left mt-4">
 						<a href="booking.html">Забронируйте Сейчас</a>
 				</div>
