--- a/packages.html
+++ b/packages.html
@@ -88,8 +88,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- tour packages Туры-->
 	<section class="packages py-5">
 		<div class="container py-lg-4 py-sm-3">
-			<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Туры</h3>
-			<p class="text mt-2 mb-5 text-center"> Все туры выходного дня от Нового Поворота</p>
+			<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Путешествия</h3>
+			<p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
 			<div class="row">
 				<!--  Пиво -->
 				<div class="col-lg-3 col-sm-6 mb-5">
