--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
 
                     <h6>Расположение</h6>
-                    <p>Новый Поворот
+                    <p>"Новый Поворот"
                         <br>Запорожье, Украина. </p>
                 </li>
 
