--- a/contact.html
+++ b/contact.html
@@ -136,9 +136,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-lg-6 col-md-6 contact-right pl-lg-5">
 						<h4>У Вас Есть Вопросы О Нас? Напишите Нам.</h4>
-						<p class="mt-md-4 mt-2">Duis nisi sapien, elementum finibus fermentum eget, aliquet et leo. Mauris hendrerit vel ex.
-						Quisque vitae luctus massa. Phas ellus sed aliquam leo. Vestibulum ullamcorper massa eut sed fringilla. Integer ultrices finibus sed nisi.
-						in convallis felis da bus sit amet  aliquet et leo dolor sit amet aliquet.</p>
+						<p class="mt-md-4 mt-2">
+                                                 Ваше обращение будет принято, обработано и в течении
+                                                  10 дней ожидайте обратной связи.
+                                                </p>
 						<h5 class="mt-lg-5 mt-3">Рабочие часы</h5>
 						<p class="mt-3">С понедельника по пятницу: с 09:00 до 18:00.</p>
 						<p>Суббота и воскресенье: выходной.</p>
