--- a/booking.html
+++ b/booking.html
@@ -111,10 +111,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<option>Тур</option>
 								<option>Полтава</option>
                                                                 <option>Лимонарий</option>
-								<option>Натуральное пиво</option>
-								<option>Франция</option>
+								<option>Пиво</option>
+								<option>ЛОЛ</option>
 								<option>Турция</option>
-								<option>Грузия</option>
+								<option>Хортица</option>
 							</select>
 						</div>
 						<div class="col-md-12 form-group contact-forms">
