--- a/about.html
+++ b/about.html
@@ -188,7 +188,9 @@
 	<div class="container py-lg-5 py-md-3">
 			<h3 class="heading text-capitalize text-center mb-lg-5 mb-4" data-aos="zoom-in">Что Говорят Наши Клиенты</h3>
 		<div class="row pt-xl-4">
-			<div class="col-md-4 test-grid px-lg-4">
+                        <div id="wpac-comment"></div>
+			<!--
+                        <div class="col-md-4 test-grid px-lg-4">
 				<div class="testi-info text-center">
 					<p class="text-li">"Sed ut perspiciatis unde omnis ist natus error sit volup tatem acu antium dolor tium sed e ullam dolor amet.</p>
 					<div class="test-img text-center mt-4">
@@ -215,11 +217,11 @@
 					<h3 class="mt-md-4 mt-3">Elizabeth</h3>
 				</div>
 			</div>
+                        -->
 		</div>
 	</div>
 </section>
 <!-- //testimonials -->
-
 
 <!--footer -->
 <footer>
@@ -429,5 +431,21 @@
 		});
  
     </script>
+
+   <script type="text/javascript">
+wpac_init = window.wpac_init || [];
+wpac_init.push({widget: 'Comment', id: 29160});
+(function() {
+    if ('WIDGETPACK_LOADED' in window) return;
+    WIDGETPACK_LOADED = true;
+    var mc = document.createElement('script');
+    mc.type = 'text/javascript';
+    mc.async = true;
+    mc.src = 'https://embed.widgetpack.com/widget.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
+})();
+</script>
+<a href="https://widgetpack.com" class="wpac-cr">Comments System WIDGET PACK</a>
+
 </body>
 </html>
