--- a/about.html
+++ b/about.html
@@ -183,12 +183,16 @@
 </section>
 <!-- tabs -->
 
+<!-- Отзывы -->
+
 <!-- testimonials -->
 <section class="testimonials py-5" id="testi">
 	<div class="container py-lg-5 py-md-3">
 			<h3 class="heading text-capitalize text-center mb-lg-5 mb-4" data-aos="zoom-in">Что Говорят Наши Клиенты</h3>
 		<div class="row pt-xl-4">
-                        <div id="wpac-review"></div>
+
+                        <div id="wpac-review" style="width:90%;"></div>
+
                        <!-- <div id="wpac-comment"></div>
 			
                         <div class="col-md-4 test-grid px-lg-4">
