--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
 			<h3 class="heading text-capitalize text-center mb-lg-5 mb-4" data-aos="zoom-in">Что Говорят Наши Клиенты</h3>
 		<div class="row pt-xl-4">
 
-                        <div id="wpac-review" style="width:90%;"></div>
+                        <div id="wpac-review" style="width:90%; margin: 0 auto;"></div>
 
                        <!-- <div id="wpac-comment"></div>
 			
