--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="container">
 							<div class="w3layouts-banner-info">
 								<h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем ваши мечты. </h3>
-								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
+								<h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
 								<div class="buttons mt-4">
 									<a href="about.html" class="btn mr-2">О Нас</a>
 									<a href="booking.html" class="btn">Заказать Тур</a>
@@ -91,7 +91,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="container">
 							<div class="w3layouts-banner-info">
 								<h3 class="text-wh">Лучше путешествовать, чем приезжать. Будем авантюристами.</h3>
-								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
+								<h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
 								<div class="buttons mt-4">
 									<a href="about.html" class="btn mr-2">О Нас</a>
 									<a href="booking.html" class="btn">Заказать Тур</a>
@@ -107,7 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="container">
 							<div class="w3layouts-banner-info">
 								<h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем ваши мечты.</h3>
-								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
+								<h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
 								<div class="buttons mt-4">
 									<a href="about.html" class="btn mr-2">О Нас</a>
 									<a href="booking.html" class="btn">Заказать Тур</a>
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="container">
 							<div class="w3layouts-banner-info">
 								<h3 class="text-wh">Лучше путешествовать, чем приезжать. Будем авантюристами.</h3>
-								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
+								<h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
 								<div class="buttons mt-4">
 									<a href="about.html" class="btn mr-2">О Нас</a>
 									<a href="booking.html" class="btn">Заказать Тур</a>
