--- a/index.html
+++ b/index.html
@@ -150,11 +150,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row">
 			<div class="col-lg-6 about-left">
 				<h3 class="mt-lg-3">Мы отвезем вас в лучшие места Украины, <strong> путешествуйте вместе с нами!  </strong></h3>
-				<p class="mt-4">Duis nisi sapien, elementum finibus fermentum eget, aliquet leo et. Mauris hendrerit vel ex.
-				Quisque vitae luctus massa. Phasellus sed aliquam leo. Vestibulum ullamcorper a massa eu fringilla. Integer ultrices finibus sed nisi.
-				in convallis felis dapibus sit amet.</p>
-				<p class="mt-3"> Donec a arcu et sapien hendrerit accumsan. Pellentesque sit amet eros iac, elementum 
-				urna ipsum accumsan, iaculis ligula. Aenean quam eget maximus in convallis felis dapibus sit amet.</p>
+				<p class="mt-4">
+                                 Сделаем Вашу жизнь ярче и разнообразнее. 
+                                 Экскурсии, походы, мастер-классы и дегустации... 
+                                 Самые неожиданные места Украины и Европы. 
+                                </p>
+				<p class="mt-3">  
+                                  Путешествуйте с улыбкой. С любовью Новый поворот!
+                                </p>
 			</div>
 			<div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5">
 				<img src="images/about.jpg" alt="" class="img-fluid abt-image" />
