--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                                  Самые неожиданные места Украины и Европы. 
                                 </p>
 				<p class="mt-3">  
-                                  Путешествуйте с улыбкой.<br/> С любовью Новый поворот!
+                                  Путешествуйте с улыбкой. С любовью Новый поворот!
                                 </p>
 			</div>
 			<div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5">
