--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 	<div class="container py-lg-5 py-sm-4">
 		<div class="row">
 			<div class="col-lg-6 about-left">
-				<h3 class="mt-lg-3">Мы Отвезем Вас В Лучшие Места Мира,  <strong>Путешествуйте Вместе С Нами!</strong></h3>
+				<h3 class="mt-lg-3">Мы Отвезем Вас В Лучшие Места,  <strong>Путешествуйте Вместе С Нами!</strong></h3>
 				<p class="mt-4">
                                  Сделаем Вашу жизнь ярче и разнообразнее. 
                                  Экскурсии, походы, мастер-классы и дегустации... 
