--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container py-lg-5 py-sm-4">
 		<div class="row">
 			<div class="col-lg-6 about-left">
-				<h3 class="mt-lg-3">Мы отвезем вас в лучшие места Украины, <strong> путешествуйте вместе с нами!  </strong></h3>
+				<h3 class="mt-lg-3">Мы отвезем вас в лучшие местa, <strong> путешествуйте вместе с нами!  </strong></h3>
 				<p class="mt-4">
                                  Сделаем Вашу жизнь ярче и разнообразнее. 
                                  Экскурсии, походы, мастер-классы и дегустации... 
