--- a/about.html
+++ b/about.html
@@ -251,8 +251,8 @@
 					<h3>О нас</h3>
 				</div>
 				<div class="footer-text">
-					<p>Vivamus magna justo, laci niats eget consectetur sed, conval lis at tellus. Nulla quis lorem ipnt libero.
-					Lorem ipsum dolor.</p>
+                                   <p>Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Самые неожиданные места Украины и Европы.</p>
+                                   <p>Путешествуйте с улыбкой. С любовью Новый поворот!</p>
 				</div>
 				<ul class="social_section_1info">
 					<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fa fa-facebook"></span></a></li>
