--- a/booking.html
+++ b/booking.html
@@ -194,7 +194,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="row">
 					<ul class="col-6 links">
 						<li><a href="https://novi-povorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-						<li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Натуральное Пиво </a></li>
+						<li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
 						<li><a href="https://novi-povorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a></li>
 					</ul>
 					<ul class="col-6 links">
