--- a/packages.html
+++ b/packages.html
@@ -421,9 +421,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<h3>О нас</h3>
 						</div>
 						<div class="footer-text">
-							<p>Vivamus magna justo, laci niats eget consectetur sed, conval lis at tellus. Nulla quis
-								lorem ipnt libero.
-								Lorem ipsum dolor.</p>
+							<p>Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Самые неожиданные места Украины и Европы.</p>
+                                   			<p>Путешествуйте с улыбкой. С любовью Новый поворот!</p>
 						</div>
 						<ul class="social_section_1info">
 							<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span
@@ -457,22 +456,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<h3>Места для путешествий</h3>
 						</div>
 						<div class="row">
-							<ul class="col-6 links">
-								<li><a href="#choose" class="scroll">New Zealand </a></li>
-								<li><a href="#overview" class="scroll">Paris, France </a></li>
-								<li><a href="#pricing" class="scroll">Los Angles</a></li>
-								<li><a href="#faq" class="scroll"> Darlington</a></li>
-								<li><a href="#testimonials" class="scroll">Canada </a></li>
-								<li><a href="#contact" class="scroll"> South Africa </a></li>
-							</ul>
-							<ul class="col-6 links">
-								<li><a href="#">Spain </a></li>
-								<li><a href="#">Turkey </a></li>
-								<li><a href="#faq" class="scroll">Europe </a></li>
-								<li><a href="#">Italy </a></li>
-								<li><a href="#">Sweden </a></li>
-							</ul>
-						</div>
+					<ul class="col-6 links">
+						<li><a href="https://novi-povorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
+						<li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+						<li><a href="https://novi-povorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a></li>
+					</ul>
+					<ul class="col-6 links">
+						<li><a href="https://novi-povorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a></li>
+						<li><a href="https://novi-povorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
+						<li><a href="https://novi-povorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a></li>
+					</ul>
+				</div>
 					</div>
 					<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 						<div class="footer-title">
