--- a/404.html
+++ b/404.html
@@ -174,7 +174,7 @@ p a:hover{
 <body>
 <div class="wrap">
     <div class="logo">
-        <img src="./assets/img/404.png" alt="404"  />
+        <img src="./assets/images/404.png" alt="404"  />
         <p><a href="https://novi-povorot.pp.ua">Вперед на страницу туров выходного дня "Новый Поворот"</a></p>
     </div>
 </div>
