--- a/packages.html
+++ b/packages.html
@@ -225,7 +225,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<!--  //Хортица  -->
 
-				<!--  ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
+				<!--  Карпаты -->
 				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
 						<a href="https://novi-povorot.pp.ua/page-LOL.html">
@@ -234,19 +234,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p><span class="fa fa-tags"></span> <span>170грн.</span></p>
 					</div>
 					<div class="package-info">
-						<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+						<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты, Украина.</h6>
 						<h5 class="my-2">
 							<a href="https://novi-povorot.pp.ua/page-LOL.html">
-								Лол
+								Карпаты
 							</a>
 						</h5>
-						<p class="">Праздник в стиле Лол!</p>
+						<p class=""> Походы в Карпаты с комфортом...</p>
 						<ul class="listing mt-3">
-							<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+							<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>от 2 до 6 Дней</span></li>
 						</ul>
 					</div>
 				</div>
-				<!--  //ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
+				<!--  //Карпаты  -->
 
 				<!--  ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
 				<div class="col-lg-3 col-sm-6 mb-5">
