--- a/packages.html
+++ b/packages.html
@@ -228,15 +228,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--  Карпаты -->
 				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
-						<a href="https://novi-povorot.pp.ua/page-LOL.html">
-							<img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
+						<a href="https://novi-povorot.pp.ua/page-Karpati.html">
+							<img src="images/karpati-mini.jpg" alt="LOL" class="img-fluid" />
 						</a>
-						<p><span class="fa fa-tags"></span> <span>170грн.</span></p>
+						<p><span class="fa fa-tags"></span> <span>от 1500грн. до 2400грн.</span></p>
 					</div>
 					<div class="package-info">
 						<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты, Украина.</h6>
 						<h5 class="my-2">
-							<a href="https://novi-povorot.pp.ua/page-LOL.html">
+							<a href="https://novi-povorot.pp.ua/page-Karpati.html">
 								Карпаты
 							</a>
 						</h5>
