--- a/packages.html
+++ b/packages.html
@@ -231,7 +231,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<a href="https://novi-povorot.pp.ua/page-Karpati.html">
 							<img src="images/karpati-mini.jpg" alt="LOL" class="img-fluid" />
 						</a>
-						<p><span class="fa fa-tags"></span> <span>от 1500грн. до 2400грн.</span></p>
+						<p><span class="fa fa-tags"></span> <span>2400грн.</span></p>
 					</div>
 					<div class="package-info">
 						<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты, Украина.</h6>
@@ -242,7 +242,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</h5>
 						<p class=""> Походы в Карпаты с комфортом...</p>
 						<ul class="listing mt-3">
-							<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>от 2 до 6 Дней</span></li>
+							<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
 						</ul>
 					</div>
 				</div>
