--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<title>Турция | Новый поворот</title>
+<title>Карпаты | Новый поворот</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="Grand Tour Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -71,16 +71,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row">
 
         <div class="col-lg-4 main-title-text">
-          <h3 class="title">Турция</h3>
+          <h3 class="title">Карпаты</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
           <img src="images/Turkey-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <h4 class="mb-3">
-              Походы по Турции
+              Походы в Карпаты с комфортом
             </h4>
             <p class="txt-alg-jf">
-               Расписание походов по Турции...
+               Расписание походов в Карпаты
             </p>
             <hr>
             <ul class="listing">
