--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <h3 class="title">Карпаты</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
-          <img src="images/Turkey-max.jpg" alt="news image" class="img-fluid">
+          <img src="images/karpati-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <h4 class="mb-3">
               Походы в Карпаты с комфортом
