--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -84,9 +84,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
             <hr>
             <ul class="listing">
-		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>190$</span></li> 
+		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>2400 Грн.</span></li> 
 	   
-		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li> 
+		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li> 
 	     </ul>
             <br>
             <p>
