--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -120,7 +120,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
          
 		   <ul class="list-group">
 			  <li class="list-group-item active">  Расписание походов: </li>
-			  <li class="list-group-item"> Ликийская тропа от Фетхие до Каша <br/> <span class="fa fa-calendar mr-2"></span> 14.02.2021 - 21.02.2021 </li>
+			  <li class="list-group-item"> 
+                            <span class="fa fa-map-marker"></span>Ночевки в пансионатах Яремче ( Микуличин, Буковель и Татаров ) <br/> 
+                            <span class="fa fa-calendar mr-2"></span> 12.02.2021 - 14.02.2021<br/> 
+                            <span class="fa fa-tags mr-2"></span> 2000 Грн. 
+                          </li>
 			  <li class="list-group-item">   Средиземное море и античность  <br/> <span class="fa fa-calendar mr-2"></span> 20.03.2021 - 27.03.2021 </li>
 			  <li class="list-group-item">   Горы, озера Даламана и море   <br/> <span class="fa fa-calendar mr-2"></span> 28.03.2021 - 04.04.2021</li>
 			  <li class="list-group-item">    Ликийская тропа от Фетхие до Каша <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
