--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -121,10 +121,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		   <ul class="list-group">
 			  <li class="list-group-item active">  Расписание походов: </li>
 			  <li class="list-group-item"> 
-                            <span class="fa fa-map-marker"></span> Ночевки в пансионатах Яремче (Микуличин, Буковель и Татаров)<br/> 
-                            <span class="fa fa-calendar mr-2"></span> 12.02.2021 - 14.02.2021<br/> 
-                            <span class="fa fa-tags mr-2"></span> 2000 Грн.<br/>
-                            <span class="fa fa-map-o"></span> 35 Км.
+                            Ночевки в пансионатах Яремче (Микуличин, Буковель и Татаров)<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>12.02.2021 - 14.02.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>2400 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span>
                           </li>
 			  <li class="list-group-item">   Средиземное море и античность  <br/> <span class="fa fa-calendar mr-2"></span> 20.03.2021 - 27.03.2021 </li>
 			  <li class="list-group-item">   Горы, озера Даламана и море   <br/> <span class="fa fa-calendar mr-2"></span> 28.03.2021 - 04.04.2021</li>
