--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -124,7 +124,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             Ночевки в пансионатах Яремче (Микуличин, Буковель и Татаров)<br/> 
                             <span class="fa fa-calendar mr-2"></span>Дата: <span>12.02.2021 - 14.02.2021</span><br/> 
                             <span class="fa fa-tags mr-2"></span>Стоимость: <span>2400 Грн.</span><br/>
-                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span>
                           </li>
 			  <li class="list-group-item">   Средиземное море и античность  <br/> <span class="fa fa-calendar mr-2"></span> 20.03.2021 - 27.03.2021 </li>
