--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -123,14 +123,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  <li class="list-group-item"> 
                             Ночевки в пансионатах Яремче (Микуличин, Буковель и Татаров)<br/> 
                             <span class="fa fa-calendar mr-2"></span>Дата: <span>12.02.2021 - 14.02.2021</span><br/> 
-                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>2400 Грн.</span><br/>
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>2000 Грн.</span><br/>
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span>
                           </li>
-			  <li class="list-group-item">   Средиземное море и античность  <br/> <span class="fa fa-calendar mr-2"></span> 20.03.2021 - 27.03.2021 </li>
+			  <li class="list-group-item"> 
+                            Восхождение на зимнюю Говерлу<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>13.02.2021 - 15.02.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span>
+                          </li>
 			  <li class="list-group-item">   Горы, озера Даламана и море   <br/> <span class="fa fa-calendar mr-2"></span> 28.03.2021 - 04.04.2021</li>
 			  <li class="list-group-item">    Ликийская тропа от Фетхие до Каша <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
-			   <li class="list-group-item">     От Олимпуса к Средиземному морю <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
+			  <li class="list-group-item">     От Олимпуса к Средиземному морю <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
 			  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул  <br/> <span class="fa fa-calendar mr-2"></span> 15.05.2021 - 21.05.2021 </li>
 			  <li class="list-group-item">     Горы Улудаг, Мраморное море, Стамбул<br/> <span class="fa fa-calendar mr-2"></span> 05.06.2021 - 12.06.2021 </li>
 			  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул <br/> <span class="fa fa-calendar mr-2"></span> 17.09.2021 - 24.09.2021 </li>
