--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -134,7 +134,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span>
                           </li>
-			  <li class="list-group-item">   Горы, озера Даламана и море   <br/> <span class="fa fa-calendar mr-2"></span> 28.03.2021 - 04.04.2021</li>
+			  <li class="list-group-item"> 
+                             Легендарный Поп Иван<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>13.02.2021 - 15.02.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1500 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>25 Км.</span>
+                          </li>
 			  <li class="list-group-item">    Ликийская тропа от Фетхие до Каша <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
 			  <li class="list-group-item">     От Олимпуса к Средиземному морю <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
 			  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул  <br/> <span class="fa fa-calendar mr-2"></span> 15.05.2021 - 21.05.2021 </li>
