--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -118,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<li class="telegram"><a href="tg://resolve?domain=Dovgal_YV"><span class="fa fa-paper-plane"></span></a></li>
 		   </ul>
          
-		   <ul class="list-group">
+		   <ul class="list-group listing">
 			  <li class="list-group-item active">  Расписание походов: </li>
 			  <li class="list-group-item"> 
                             Ночевки в пансионатах Яремче (Микуличин, Буковель и Татаров)<br/> 
@@ -141,7 +141,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>25 Км.</span>
                           </li>
-			  <li class="list-group-item">    Ликийская тропа от Фетхие до Каша <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
+			  <li class="list-group-item">
+                            Горганы 2021: горы Хомяк и Сыняк<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>26.02.2021 - 28.02.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1500 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>30 Км.</span>
+                          </li>
 			  <li class="list-group-item">     От Олимпуса к Средиземному морю <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
 			  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул  <br/> <span class="fa fa-calendar mr-2"></span> 15.05.2021 - 21.05.2021 </li>
 			  <li class="list-group-item">     Горы Улудаг, Мраморное море, Стамбул<br/> <span class="fa fa-calendar mr-2"></span> 05.06.2021 - 12.06.2021 </li>
