--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -148,7 +148,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>30 Км.</span>
                           </li>
-			  <li class="list-group-item">     От Олимпуса к Средиземному морю <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
+			  <li class="list-group-item">
+                            Карпаты 2021: село Пороги<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>27.02.2021 - 01.03.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900/2400 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2-3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>28 Км.</span>
+                          </li>
 			  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул  <br/> <span class="fa fa-calendar mr-2"></span> 15.05.2021 - 21.05.2021 </li>
 			  <li class="list-group-item">     Горы Улудаг, Мраморное море, Стамбул<br/> <span class="fa fa-calendar mr-2"></span> 05.06.2021 - 12.06.2021 </li>
 			  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул <br/> <span class="fa fa-calendar mr-2"></span> 17.09.2021 - 24.09.2021 </li>
